--- a/src/content/posts/core-d20/cored20rpg-bestiary-templates-of-creature-roles-part-3.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-templates-of-creature-roles-part-3.mdx
@@ -37,6 +37,24 @@ tags:
 
 **Ты не можешь уйти**	Существа всегда провоцируют ваши атаки по возможности, даже если они совершают действие "Отход", прежде чем покинуть зону вашей досягаемости. Когда вы поражаете существо атакой по возможности, скорость этого существа становится равной 0 до конца хода.
 
+**Indomitable (1/SR).** %%creaturename%%can reroll a saving throw that he fails. He must use the new roll.
+Martial Advantage. Once per turn, the %%creaturename%%can deal an extra 3 (1d6) damage to a creature it hits with a weapon attack if that creature is within 5 feet of an ally of the %%creaturename%%that isn't incapacitated.
+Martial Training I. The %%creaturename%%gains +1 bonus to weapon attack rolls and combat maneuvers DC.
+Pack Tactics. The %%creaturename%%has advantage on an attack roll against a creature if at least one of the %%creaturename%%’s allies is within 5 feet of the %%creaturename%%and the ally isn't incapacitated.
+Phalanx Formation. The %%creaturename%% has advantage on attack rolls and Dexterity Saving Throws while standing within 5 feet of a %%creaturename%%’s ally wielding a shield.
+Phalanx Tactics. When the %%creaturename%% uses the Help action to aid an ally in attacking a creature, the target of that attack can be within 10 feet of the footman, rather than 5 feet of it, if the target can see the %%creaturename%% and the %%creaturename%% is wielding a glaive, halberd, pike, or spear in two hands
+Shield Wall. While the soldier is within 5 feet of at least two other creatures with this trait and they are all wielding shields, the soldier gains a +2 bonus to their AC and to Dexterity Saving Throws.
+Tactical Discipline. The %%creaturename%% has advantage on all ability checks and Saving Throws made during combat.
+Tempered by War. The %%creaturename%%has advantage on Saving Throws against being frightened.
+Weapon and Shield style. When %%creaturename%%use non-heavy melee weapon with shield, he gains bonus +2 to damage rolls with this weapon
+Tactical Discipline. The creature has advantage on all ability checks and Saving Throws made during combat.
+Unyielding. When The creature is subjected to an effect that would move it, knock it prone, or both, it can choose to be neither moved nor knocked prone.
+Weapons Expert. A weapon deals one extra die of its damage when The creature hits with it.
+Bonus Actions
+Second Wind (1/SR). %%creaturename%%can use a bonus action to regain 16 (1d10 + %%level%%) Hit Points.
+Reactions
+Protective Retaliation. When a creature within 5 feet of The creature makes an attack against one of The creature’s allies, The creature can use its reaction to make a melee weapon attack against the attacking creature.
+
 
 ## **Контролер**
 
@@ -58,7 +76,9 @@ tags:
 
 **Контролирующие заклинания (особенность).** Выберите до двух из следующих заклинаний: слепота/глухота, повеление, опутывание, смазка, порыв ветра, жуткий смех, удержание человека, левитация, луч ослабления, молчание, внушение или паутина. Это существо может сотворять любое из выбранных заклинаний как действие. Если у этого существа еще нет КС спасброска от заклинаний, то КС спасброска для этих заклинаний равен 10 + 1/2 ПО. Выбранные заклинания не могут быть изменены для этого существа. 
 
-**Усовершенствованное контролирующее заклинание (особенность).**Выберите одно заклинание из из особенности "Контролирующие заклинания", которое может сотворять это существо. Существо получает одно из следующих преимуществ: 
+**Усовершенствованное контролирующее заклинание (особенность).** 
+
+Выберите одно заклинание из из особенности "Контролирующие заклинания", которое может сотворять это существо. Существо получает одно из следующих преимуществ: 
 - Заклинание можно сотворять как бонусное действие.  
 - Заклинание можно сотворять в качестве реакции на получение урона  
 от врага. 
@@ -97,20 +117,23 @@ tags:
 **Защита**	Союзники в радиусе 10 футов от вас получают +2 КЗ.
 Клич сплочения	Один раз за ход, когда вы поражаете цель атакой, вы можете снять текущее состояние с союзника, которого вы видите.
 
-
 ## **Лидер**, он же **командир**
 
-**Вдохновение на поле боя (действие).** Существо выбирает до трех союзников, которых он может видеть в радиусе 30 футов от себя. До конца следующего хода Существа каждая цель может добавить к4 к своим броскам атаки и спасброскам.
+### Особенности
 
-**Оплот (3/день).** Когда союзник в радиусе 30 футов от военачальника проваливает Спасбросок, союзник может перебросить Спасбросок.
+Bolster. While within 30 feet of the warlord, any ally of the warlord makes Saving Throws with advantage, and that ally regains 1d6 Hit Points whenever it starts its turn there.
 
-**Приказ союзнику.** Бонусным действием Существо выбирает одного союзника, которого он видит в радиусе 30 футов от себя. Если союзник видит и слышит Существа, он может сделать одну атаку оружием в качестве реакции и получает преимущество при броске атаки.
+Brave. The warlord has advantage on Saving Throws against being frightened.
 
-**Лидерство (действие; перезаряжается после короткого или длинного отдыха).** В течение 1 минуты Существо может произносить особую команду или предупреждение, когда невраждебное существо, которое он видит в радиусе 30 футов от него, делает бросок атаки или спасбросок. Существо может добавить К4 к своему броску, если оно слышит и понимает Существа. Существо может одновременно использовать только один кубик Лидерства. Эффект заканчивается, если Существо недееспособен.
+Inspiring Presence. While the warlord isn't incapacitated, any ally within 30 feet of the warlord can't be frightened, and that ally gains temporary Hit Points equal to the warlord's Charisma modifier whenever it starts its turn there.
 
-**Вдохновляющий клич.** Бонусным действием Существо выбирает одного союзника, которого он видит в радиусе 30 футов от себя. Если союзник видит или слышит Существа, он получает временные хиты, равные рейтингу вызова Существа плюс его модификатор харизмы. Если союзник в данный момент очарован или испуган, эти эффекты немедленно прекращаются на него самого.
+Rally. While the warlord isn't incapacitated, each ally of the warlord within 30 feet of it can't be charmed or frightened.
 
-**Тактический маневр.** В качестве Бонусного действием Существо выбирает одного Существа, которого он видит в радиусе 60 футов от себя. Если союзник видит и слышит Существа, он может использовать свою реакцию, чтобы переместиться на половину своей скорости, не провоцируя атаки по возможности.
+Tactical Discipline. The warlord has advantage on all ability checks and Saving Throws made during combat.
+
+Formation Tactics. The warlord and each ally within 30 feet of it has advantage on Saving Throws against being charmed, frightened, grappled, or restrained while within 5 feet of at least one ally.
+
+Rallying Cry. The warlord chooses one ally it can see within 30 feet of it. If the ally can see or hear the warlord, it gains 10 temporary Hit Points and can't be frightened for 1 minute.
 
 **Усилитель.** Находясь в радиусе 30 футов от военачальника, любой его союзник совершает Спасброски с преимуществом, и этот союзник восстанавливает 1к6 хитов, когда начинает свой ход.
 
@@ -118,11 +141,97 @@ tags:
 
 **Вдохновляющее присутствие.** Пока военачальник дееспособен, любой союзник в радиусе 30 футов от военачальника не может быть напуган, и союзник получает временные хиты, равные модификатору харизмы военачальника, когда начинает свой ход там.
 
-**Мастер тактики.** Военачальник может выполнить действие "Помощь" в качестве бонусного действия.
-
-**Ралли.** Пока военачальник не дееспособен, каждый союзник военачальника в радиусе 30 футов от него не может быть очарован или испуган.
+**Ралли.** Пока военачальник дееспособен, каждый союзник военачальника в радиусе 30 футов от него не может быть очарован или испуган.
 
 **Тактическая дисциплина.** Военачальник имеет преимущество при всех проверках характеристик и спасбросках, сделанных во время боя.
+
+Indomitable (1/LR). The commander rerolls a failed saving throw.
+Military Strategy. Each creature of the captain choice that is within 30 feet of it and can see and hear it has advantage on initiative rolls. 
+
+Inspiring Surge (1/SR). After taking an action on its turn, the banneret can take one additional action. When it does so, it can also choose up to two friendly creatures within 60 feet of it that can see and hear the banneret. A target can immediately use its reaction to make one melee or ranged weapon attack.
+
+Action Surge (1/SR). On their turn, the field commander can take an additional action on top of their normal action and possible bonus action.
+
+Bolstering Presence. Allies within 60 feet of the grand general can use the grand general’s Wisdom and Charisma saving throw bonuses instead of their own.
+
+Alert. The guard captain has advantage on initiative rolls, and it can't be surprised while it is conscious.
+
+Master of Tactics. The squadron leader can take the Help action as a bonus action.
+
+Lead by Example (Trait). When this creature hits a target with  an attack, any ally of this creature who can see the target has  advantage on attack rolls against the target until the start of  this creature’s next turn. 
+
+
+### Действия
+
+**Вдохновение на поле боя (действие).** Существо выбирает до трех союзников, которых он может видеть в радиусе 30 футов от себя. До конца следующего хода Существа каждая цель может добавить к4 к своим броскам атаки и спасброскам.
+
+**Лидерство (действие; перезаряжается после короткого или длинного отдыха).** В течение 1 минуты Существо может произносить особую команду или предупреждение, когда невраждебное существо, которое он видит в радиусе 30 футов от него, делает бросок атаки или спасбросок. Существо может добавить К4 к своему броску, если оно слышит и понимает Существа. Существо может одновременно использовать только один кубик Лидерства. Эффект заканчивается, если Существо недееспособен.
+
+**Battle Cry (1/Day).** Each creature of the warchief's choice that is within 30 feet of it, can hear it, and not already affected by Battle Cry gain advantage on attack rolls, until the start of the warchief's next turn. The warchief can then make one attack as a bonus action.
+
+**Ilneval's Command (Recharges 4–6).** Up to three allied orcs within 120 feet of this orc that can hear it can use their reactions to each make one weapon attack.
+
+Shield Wall. For 1 minute the captain and any ally who can see the captain gains +1 AC if they are using a shield. They gain an additional +1 AC as long as they are standing within 5 ft. of another ally using a shield. The maximum AC bonus from this ability is +2 AC.
+
+Command the Attack (1/LR). The captain issues a command to all nonhostile creatures within 30 feet. Creatures who can see or hear the captain can use their reaction to make a single weapon attack with advantage.
+
+Commander's Strike. The commander chooses one friendly creature that can see and hear it. That creature can immediately use its reaction to make one weapon attack, adding 3 (1d6) to the attack's damage roll.
+
+Commander’s Strike (3/SR). When the field commander hits a creature with a melee attack, they can use their bonus action to choose an ally. If the chosen ally can see and hear they commander, they can either move up to their Speed directly toward the target of the attack or make a single melee attack against it.
+
+Leadership (1/SR). For 1 minute, the captain can utter a special command or warning whenever a nonhostile creature that it can see within 30 feet of it makes an attack roll or a saving throw. The creature can add a d4 to its roll provided it can hear and understand the captain. A creature can benefit from only one Leadership die at a time. This effect ends if the captain is incapacitated.
+
+Coordinated Assault. The grand general chooses a point they can see within 120 feet of themselves. Allies that start the turn within 60 feet of the grand general that can see and hear the grand general gain a +2 bonus on attack rolls against
+
+Battle Cry (1/LR). Each creature of The Captain’s choice that is within 30 feet of it, can hear it, and not already affected by Battle Cry gain advantage on attack rolls until the start of The Captain’s next turn. The Captain can then make one attack as a bonus action.
+
+Voice of Command. The iron consul selects up to two allies within 90 feet of it that can hear its commands. Each ally can immediately use its reaction to make one melee attack.
+
+Sound the Attack (1/SR). up to 6 creatures of the captain's choice within 30 feet of it which can hear and understand it may use their reaction to move up to half of their movement Speed and make one attack. 
+
+
+### Бонусные действия
+
+**Приказ союзнику.** Бонусным действием Существо выбирает одного союзника, которого он видит в радиусе 30 футов от себя. Если союзник видит и слышит Существа, он может сделать одну атаку оружием в качестве реакции и получает преимущество при броске атаки.
+
+**Мастер тактики.** Военачальник может выполнить действие "Помощь" в качестве бонусного действия.
+
+**Вдохновляющий клич.** Бонусным действием Существо выбирает одного союзника, которого он видит в радиусе 30 футов от себя. Если союзник видит или слышит Существа, он получает временные хиты, равные рейтингу вызова Существа плюс его модификатор харизмы. Если союзник в данный момент очарован или испуган, эти эффекты немедленно прекращаются на него самого.
+
+**Тактический маневр.** В качестве Бонусного действием Существо выбирает одного Существа, которого он видит в радиусе 60 футов от себя. Если союзник видит и слышит Существа, он может использовать свою реакцию, чтобы переместиться на половину своей скорости, не провоцируя атаки по возможности.
+
+Second Wind (1/SR). As a bonus action, the commander can regain 10 Hit Points.
+
+Voice of Command (1/day). As a bonus action, the grand general commands their troops to get back in the fight. Each ally within 60 feet that can hear the grand general and is currently charmed, frightened, incapacitated, paralyzed, or stunned immediately makes a save against that condition with advantage, ending the effect on itself on a success. If the effect normally has no save or DC associated with it, they make a DC 20 Wisdom saving throw instead. If a creature is affected by multiple effects that cause such conditions, it makes only one save against one effect of its choice.
+
+Rally (Recharge 6). Up to 6 creatures of the captain's choice within 30 feet of it gain 5 temporary Hit Points. If any of them are frightened by a spell or ability that allows a saving throw to break the effect, those creatures may immediately make a saving throw to resist the effect.
+
+Commander's Strike. The captain may make one attack as a bonus action. Additionally, one creature of the captain's choice within 60 feet of it which can hear and understand it may use their reaction to make one attack with advantage.
+
+Shout Orders (Bonus Action, Recharge 4). This creature  chooses up to six creatures who can see and hear them. Those  creatures can immediately either move their speed or take an action. 
+
+Heal Ally (Bonus Action). This creature can choose another  creature they can see and hear within 50 feet of them. The  chosen creature regains hit points equal to 25 percent of their  hit point maximum. 
+
+### Реакции
+
+**Оплот (3/день).** Когда союзник в радиусе 30 футов от военачальника проваливает Спасбросок, союзник может перебросить Спасбросок.
+
+Fast Reflexes. When The creature takes a reaction, it can also move up to half its Speed without provoking opportunity attacks.
+
+Legendary Reaction. The creature can spend one legendary action to take a reaction, even when it has already used its normal reaction.
+
+Limited Reactiveness. The creature can take two Reactions per round in combat.
+
+Reactive. The creature can take one reaction on every turn in combat.
+
+Directed Strike (2/SR). When a creature the captain can see within 30 feet of it makes an attack roll, and the creature can hear the captain, the captain grants advantage to that roll.
+
+## Защитник
+
+Stick with Me (Trait). When this creature hits with an attack,  
+the target has disadvantage on attack rolls against any creature other than this one until the end of the target’s next turn.  
+Blocker (Trait). Any creature starting their turn next to this  creature has their speed reduced by half until the end of the  affected creature’s turn. 
+Challenge Foe
 
 ## Дополнительные особенности и действия
 
@@ -139,4 +248,94 @@ tags:
 **Ограниченная реакция.** Существо может совершать две реакции за раунд в бою.
 
 **Реакция.** Существо может взять одну реакцию на каждый ход в бою.
+
+## Хордлинг
+Хордлинг - это общий термин, используемый для обозначения любого монстра, который хорошо работает в группах. Хотя стаи демонов и нежити - самые обычные примеры ордынцев в действии, этот термин также может использоваться для обозначения организованных солдат, которые хорошо работают вместе.
+
+**Навыки.** Существо получает владение навыком "Атлетика". Если оно уже владело этим навыком, то вместо него оно получает опыт в этом навыке.
+Тактика стаи. У %%creaturename%% есть преимущество при броске атаки против существа, если хотя бы один из союзников существа находится в пределах 5 футов от существа и союзник не дееспособен.
+
+Существо также получает одну из следующих особенностей.
+
+**Тактика формирования.** Существо %%creaturename%% имеет преимущество в Спасбросках против очарования, испуга, захвата или Обездвиживания, пока оно находится в пределах 5 футов хотя бы от одного союзника.
+
+**Групповое возмездие.** Когда %%creaturename%% снижается до 0 хитов в результате атаки в ближнем бою, один союзник %%creaturename%% может использовать свою реакцию для атаки оружием ближнего боя против атакующего.
+
+**Поведение мобов.** %%creaturename%% может использовать свое бонусное действие, чтобы попытаться схватить или толкнуть существо, если хотя бы один из союзников существа находится в пределах 5 футов от него и союзник не дееспособен.
+
+**Властная стая.** У %%creaturename%% есть преимущество при проверках на захват или отталкивание существа, если хотя бы один из союзников существа находится в пределах 5 футов от цели и союзник не дееспособен.
+
+**Стая.** Существо %%creaturename%% добавляет дополнительную кость урона к своим броскам урона от оружия, находясь в пределах 5 футов от союзника, который не дееспособен.
+
+### Атаки
+Удар щитом. Атака оружием ближнего боя: +4 к попаданию, досягаемость 5 футов, одна цель. Попадание: 3 (1d4 + 1) дробящего урона. Если цель большого размера или меньше, она должна сделать спасбросок Силы на КС 12, либо будет сбита с ног или отброшена на 5 футов (по выбору бойца).
+
+### Бонусные действия
+
+**Агрессивная атака.** %%creaturename%% перемещается на своей скорости к врагу, которого видит или слышит. 
+
+**Обезоруживающий удар.** %%creaturename%% совершает атаку в ближнем бою своим копьем. При попадании цель делает спасбросок Силы КС 15. При провале предмет по выбору %%creaturename%%, который держит цель (включая щит), вылетает из ее захвата и приземляется в пространстве по выбору %%creaturename%% в 10 футах от нее.
+
+**Чистый бросок.** Атака дальнобойным оружием: +7 к попаданию, дальность 5/15 футов, одна цель. Попадание: Крупная, средняя или мелкая цель подвергается Обездвиживанию сетью, пока не освободится. Существо может использовать свое действие, чтобы сделать проверку силы КС 15, и в случае успеха освободить себя или другое существо в пределах досягаемости. Сеть - это предмет с КЗ 10, 5 хитами и иммунитетом к дробящему урону. Если цель большого размера или меньше, она должна сделать спасбросок Силы КС 12, либо будет сбита с ног или отброшена на 5 футов (по выбору %%creaturename%%).
+
+**Shield Rush.** %%creaturename%% совершает атаку своим щитом. При попадании цель делает спасбросок на Ловкость КС 15, при провале падает на землю.
+
+**Тактическое движение.** До конца хода %%creaturename%% их Скорость уменьшается вдвое, а их движение не провоцирует атаки по возможности.
+
+**Ранить противника.** %%creaturename%% совершает атаку ближнего боя своим копьем. При попадании цель получает рану, наносящую 5 (1d10) колющего урона. Существо может прекратить непрерывный урон, забинтовав рану действием или наложив на цель магическое излечение.
+
+### Реакции
+
+**Контркритический.** Когда существо, которое видит %%creaturename%%, наносит %%creaturename%% критическое попадание атакой оружием ближнего боя, %%creaturename%% делает против него атаку копьем.
+
+**Уклонение и бросок.** Когда существо, которое видит %%creaturename%%, промахивается по гладиатору атакой оружием ближнего боя, %%creaturename%% перемещается на 15 футов, не провоцируя атаки возможности.
+
+**Удар стража.** Если противник в радиусе 5 футов от %%creaturename%% атакует цель, отличную от %%creaturename%%, этот противник провоцирует возможность атаки от %%creaturename%%.
+
+**Off-Hand Counter.** Когда %%creaturename%% промахивается по атаке ближнего боя атакующего, которого он видит в радиусе 5 футов, %%creaturename%% наносит атаку коротким мечом по атакующему.
+
+**Парирование.** Когда атакующий бьет %%creaturename%% атакой ближнего боя и %%creaturename%% видит атакующего, он может добавить 2 (1d4) к своему КЗ против начальной атаки, при условии, что он владеет оружием ближнего боя.
+
+**Защита.** Когда атакующий, которого видит %%creaturename%%, делает бросок атаки против существа в радиусе 5 футов от %%creaturename%%, %%creaturename%% может наложить на бросок атаки пометку "Помеха".
+
+**Рипост.** Когда %%creaturename%% промахивается по атаке ближнего боя атакующего, которого он видит в пределах 5 футов, %%creaturename%% делает атаку рапирой против атакующего с преимуществом.
+
+**Блок щитом.** Если атакующий бьет %%creaturename%% атакой ближнего боя и %%creaturename%% видит атакующего, он может добавить 2(1d4) к своему КЗ против начальной атаки, при условии, что он владеет оружием ближнего боя.
+
+**Бросок противника.** Когда существо, которое видит %%creaturename%%, промахивается по %%creaturename%%% атакой оружием ближнего боя, оно делает спасбросок Ловкости на КС 15. В случае провала оно отталкивается на 15 футов от %%creaturename%%.
+
+## Templates by warrior type
+
+### Heavy infantry
+
+Line Defense. If the %%creaturename%% is within 5 feet of at least two other creatures with this trait, they can use their reaction to make a single melee weapon attack against a target when that target enters the line infantry’s reach.
+Lunge. The %%creaturename%% makes an opportunity attack with its halberd against a target that enters its reach.
+
+### Arbalesters
+
+Plant Shield. The %%creaturename%% fixes its shield onto a suitable surface. While embedded in place, the shield provides a creature behind it with three-quarters cover. The arbalester can also use an action to unfix the shield from its position.
+
+### Archers
+Archer's Eye (3/Day). As a bonus action, the %%creaturename%%can add 1d10 to its next attack or damage roll with a longbow or shortbow.
+Archery. The %%creaturename%%has a +2 bonus to ranged weapon attack rolls (included in the attack).
+Arrow Volley. The %%creaturename%%uses the Ready action to prepare to loose an arrow volley on the command of a chosen creature. The commander designates a target when they give the command, and each creature with this trait who has readied and can see the target shoots their arrow If at least 5 arrows are shot this way, creatures within 5 feet of the target must make a DC 12 Dexterity saving throw, taking 9 (2d8) piercing damage on a failed save or half as much damage on a successful one. For every 5 additional arrows launched, the area of effect increases by 5 feet.
+Careful Eyes. The %%creaturename%%can use a bonus action to perform a Search action.
+Keen Sight. The %%creaturename%%has advantage on Wisdom (perception) checks that rely on sight.
+Sharpshooter. The %%creaturename%%’s ranged weapon attacks ignore half cover and three-quarters cover and attacking at long range doesn't impose disadvantage on the %%creaturename%%’s ranged weapon attack rolls.
+Steady Aim (3/Day). As a bonus action, the %%creaturename%%takes careful aim at a creature it can see within range of its ranged weapon. Until the end of its turn, the %%creaturename%%deals an an extra 5 damage with each of its ranged weapon attacks against the target.
+Steady Aim. The %%creaturename%%’s longbow attacks ignore half and three quarters cover and deal an additional 4 (1d8) damage (included in the attack).
+World-Class Bowmanship. If the %%creaturename%% has disadvantage on attack rolls made with its longbow, it can choose to ignore the disadvantage. If it does so, it cannot benefit from effects that would grant it advantage on the attack.
+
+### Cavalry
+Coordinated Charge. While mounted, if the %%creaturename%%begins or ends their turn within 10 feet of at least two other mounted creatures with this trait, the trooper can make a coordinated charge. During a coordinated charge, if they move at least 20 feet straight toward a target, the %%creaturename%%gains advantage on the first attack roll they make against that target.
+Defensive Maneuver. The %%creaturename%%adds 2(1d4) to its AC against one melee attack that would hit it, or adds 2(1d4) to its mount's AC against one melee attack that would hit the mount. To do so, the %%creaturename%%
+Lance Charge. If the %%creaturename%% moves at least 30 feet straight toward a target while mounted, and then hits it with a spear attack on the same turn, the target takes an extra 4 (1d8) piercing damage.
+Mounted Advantage. While mounted and not incapacitated, the %%creaturename%% has advantage on melee attack rolls against any unmounted creature that is smaller than its mount.
+Mounted Combatant. When the %%creaturename%%’s mount is targeted with an attack, the trooper can choose to become the target of the attack instead.
+Mounted Defense. While mounted, the %%creaturename%%can force an attack that targets its mount to target the rider instead.
+Mounted Evasion. While mounted, if the rider’s mount is subject to an effect that allows it to make a Dexterity saving throw to take only half damage, it instead takes no damage if it succeeds on the saving throw, and only half damage if it fails.
+Mounted Lancing. While mounted and not incapacitated, the %%creaturename%% an extra 6 (1d12) damage when it hits with its lance against any unmounted creature that is smaller than its mount.
+Mounted Skirmisher. While the %%creaturename%% is mounted and not incapacitated, it’s mount can use the Disengage or Dash action as a bonus action after the %%creaturename%% uses its action to make a ranged attack with its shortbow.
+Skilled Rider. Attack rolls made against the %%creaturename%%’s mount have disadvantage.
+Thundering Charge (1/Turn). If the %%creaturename%%’s mount moves at least 20 feet straight toward a target and the %%creaturename%% hits it with a spear attack on the same turn, the target takes an extra 7 (2d6) piercing damage. If the target is a creature, it must succeed on a DC 13 Strength saving throw or be knocked prone.
 
