--- a/src/content/posts/core-d20/cored20rpg-bestiary-roles-of-creatures.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-roles-of-creatures.mdx
@@ -67,7 +67,14 @@ tags:
 
 **Налетчики** - мобильные воины, использующие в бою тактику "бей и беги". Их особенности позволяют им максимально эффективно использовать свою позицию. Налётчики во всём полагаются на подвижность. Их боевые характеристики не выделяются из общего ряда, но в мобильности им нет равных.  Налетчики выступают мобильными атакующими, которые нападают на слабозащищенных противников с флангов и с тыла. Налетчики часто обладают особенностями, которые позволяют им подбегать, ударять и отступать во время одного хода. Налётчики хорошо сражаются в компании солдат и громил, потому что те стоят на месте и приковывают к себе всё внимание отряда, а у налётчиков появляется место для маневрирования. Налетчики точно делают сражения динамичными. Они могут перемещаться, чтобы атаковать уязвимых противников, которые слабее в ближнем бою, а затем отступать (если это безопасно), чтобы защитить свою артиллерию, контролера, лидера и поддержку. Поскольку они как правило являются мобильными, то могут опережать и обгонять противников, что будет заставлять их хорошо раздумывать над своими действиями. Налетчики хорошо сочетаются со всеми другими ролями существ, включая других налетчиков.
 
-**Лидер.** В целом – *лидер не является отдельной ролью.* Лидер может быть и солдатом, и громилой, и артиллерией. Лидером его делает наличие особенностей направленных на взаимодействие с союзниками, их усиление и использование. Как правило, особенности командира обеспечивают либо лечение, либо увеличение ключевых боевых характеристик (спасброски, КЗ, бонусы атаки) или же обеспечивают дополнительное маневрирование и действия. Во время сражения лидер занимает позицию, обусловленную его особенностями, которые он может применять для обеспечения преимуществ своих союзников, чтобы иметь возможность воздействовать на максимальное количество союзников а также эффективно действуя самостоятельно. Для обеспечения своей защиты лидер как правило сопровождается парой громил или солдат, которые будут сдерживать противников в их стремлении нейтрализовать лидера. А если лидер действует без таких телохранителей в сочетании с засадниками или налетчиками, то стремится проявлять осторожность, поскольку противнику будет легко переключиться с рядовых засадников или налетчиков на командира. Эффективный лидер это тот, при котором его союзники получат наивысшее преимущество от его особенностей и умений. Например, лидер, предоставляющий бонус защиты ближайшим существам, станет хорошим лидером для громил, у которых защиты слишком малы.
+**Лидер.** В целом – *лидер не является отдельной ролью.* Лидер может быть и солдатом, и громилой, и артиллерией. Лидером его делает наличие особенностей направленных на взаимодействие с союзниками, их усиление и использование. Лидеры позволяют своим товарищам действовать с большей эффективностью, чем обычно. Как правило, особенности командира обеспечивают либо лечение, либо увеличение ключевых боевых характеристик (спасброски, КЗ, бонусы атаки) или же обеспечивают дополнительное маневрирование и действия. Во время сражения лидер занимает позицию, обусловленную его особенностями, которые он может применять для обеспечения преимуществ своих союзников, чтобы иметь возможность воздействовать на максимальное количество союзников а также эффективно действуя самостоятельно.
+
+Некоторые лидеры повышают Хиты своих союзников, например, с помощью магии излечения или давая им временные Хиты. Другие повышают их атакующую мощь, например, приказывая им атаковать с помощью своей реакции или давая преимущество при бросках атаки. Некоторые вожди даже призывают в бой дополнительных союзников, используя заклинания или источая из своего тела силу низшего существа. Для обеспечения своей защиты лидер как правило сопровождается парой громил или солдат, которые будут сдерживать противников в их стремлении нейтрализовать лидера. А если лидер действует без таких телохранителей в сочетании с засадниками или налетчиками, то стремится проявлять осторожность, поскольку противнику будет легко переключиться с рядовых засадников или налетчиков на командира. 
+
+Эффективный лидер это тот, при котором его союзники получат наивысшее преимущество от его особенностей и умений. Например, лидер, предоставляющий бонус защиты ближайшим существам, станет хорошим лидером для громил, у которых защиты слишком малы. 
+Вожаки стай гноллов, военачальники хобгоблинов и вожди орков - все это примеры лидеров.
+
+Это обозначение находится на полпути между ролью и уровнем. У него есть определенный стиль игры в столкновении, но его широкая природа не раскрывает ничего о наступательных или защитных способностях монстра. Статус лидера, как правило, не говорит о том, является ли он **обычным** врагом, **элитным** или **чемпионом** (см.дальше)  .
 
 Также можно выделить несколько вспомогательных ролей, таких как **Атакующий**, **Защитник**, которые могут являться подтипами как **солдат**, так и **громил**, **налетчиков**, **засадников**.
 
@@ -81,7 +88,20 @@ tags:
 
 Использование различных ролей существ полезно не только с точки зрения обеспечения эффективных противников, но также и для обеспечения интереса игрока к самому процессу сражения. Вместе с тем, при наличии на поле боя существ со всеми видами ролей приводит скорее к излишнему усложнению в виду необходимости отслеживания всех взаимодействий, чтобы существа дейстовали эффективно.
 
-Помимо этих ролей еще можно сформировать аналогично четвертой редакции, "Бегите, смертные", Гиффиглифу понятие **обычного** существа, **элитного (чемпиона)** и **соло** существа. От использования миньонов мы точно воздерживаемся, поскольку это не соответствует нашему подходу к миростроению.
+Помимо этих ролей еще можно сформировать аналогично четвертой редакции, "Бегите, смертные", Гиффиглифу понятие **стандартного** существа, **элитного (чемпиона)** и **соло** существа. От использования миньонов мы точно воздерживаемся, поскольку это не соответствует нашему подходу к миростроению.
+
+**Стандартные** враги - это типичные противники, с которыми приходится сражаться в конкретном столкновении. Их победа займет немного времени, и хотя они могут быть опасны в группах по два или больше, ни один стандартный враг не будет представлять смертельную угрозу для отряда приключенцев в одиночку.
+
+**Элитные** враги превосходят всех остальных. Обычно их сопровождают стандартные враги и они представляют собой серьезную угрозу, способную уничтожить отряд, если им дать шанс. 
+
+**Чемпионы**- это могущественные враги, которые превращают обычную встречу в бой с боссом. Либо их сопровождают немного стандартных существ либо они достаточно сильны, чтобы справиться с противниками в одиночку. Обычно они обладают легендарной устойчивостью, легендарными действиями или другими механиками, позволяющими им не отставать от партии ни в нападении, ни в защите, несмотря на то что они всего лишь одно существо, но такие характеристики требуются не всем чемпионам.
+
+#### ПО существа в зависимости от уровня и среднего уровня отряда
+| Уровень	| ПО |
+|---------|--------|
+| Стандарт	| СУО/3 to СУО × 2/3 |
+| Элитный	| СУО × 2/3 to СУО × 5/4 |
+| Чемпион	| СУО × 5/4 to СУО × 3/2 |
 
 Для каждой из ролей на основе анализа существующих статблоков в D&D 5e и совместимых продуктах можно выделить характерные особенности и действия, которыми обладают представители той или иной роли. Это нам позволит сформировать шаблоны для создания существ определенных ролей из обычных существ. 
 
