--- a/src/content/posts/translations/on-creative-crocodile-conundrum.mdx
+++ b/src/content/posts/translations/on-creative-crocodile-conundrum.mdx
@@ -11,7 +11,7 @@ translator: Антон "Palant" Palikhov
 
 Действительно ли современные геймеры объективно менее креативны, чем геймеры старой школы?
 
-Здесь http://monstersandmanuals.blogspot.com/2011/10/what-am-i-thinking.html, в Monsters and Manuals, Noisms обсуждает некоторые из агентств — высасывающие, читающие мысли, плохо представленные: «Попался!» идеалы, из которых состоят некоторые из приключений 4-го ядра.
+[Здесь](http://monstersandmanuals.blogspot.com/2011/10/what-am-i-thinking.html), в Monsters and Manuals, Noisms обсуждает некоторые из агентств — высасывающие, читающие мысли, плохо представленные: «Попался!» идеалы, из которых состоят некоторые из приключений 4-го ядра.
 
 Noisms постулировал проблему, которую можно творчески решить различными способами. Клад сокровищ находится на другой стороне комнаты, с каналом посередине, заполненным крокодилами.
 
