--- a/src/content/posts/translations/lands-lords-ladies.mdx
+++ b/src/content/posts/translations/lands-lords-ladies.mdx
@@ -10,7 +10,10 @@ author: C. Stapleford
 translator: D&D Homebrew в массы
 cover: /decorations/lands-lords-ladies.png
 ---
+
 **Оригинальный документ:** [DMGuild](https://www.dmsguild.com/product/240881/Lands-Lords-and-Ladies)
+
+[Homebrewery](https://homebrewery.naturalcrit.com/share/cjO2Rxmt9xVt)
 
 ## Введение
 
